--- a/heat-standalone/Dockerfile
+++ b/heat-standalone/Dockerfile
@@ -1,7 +1,5 @@
 FROM %%KOLLA_NAMESPACE%%/%%KOLLA_PREFIX%%base:%%KOLLA_TAG%%
 MAINTAINER Kolla Project (https://launchpad.net/kolla)
-# docker run -it -v /var/run/docker.sock:/var/run/docker.sock kollaglue/centos-rdo-heat-standalone /bin/bash
-# might need privileged flag?
 
 RUN yum -y install openstack-heat-api-cfn \
   python-openstackclient \
@@ -16,6 +14,7 @@ RUN yum -y install openstack-heat-api-cfn \
   MySQL-python \
   hostname \ 
   rabbitmq-server \
+  docker \
   supervisor \
   git \
   && yum clean all
@@ -23,5 +22,6 @@ RUN yum -y install openstack-heat-api-cfn \
 RUN git clone https://github.com/stackforge/kolla.git /opt/kolla/kolla
 RUN git clone https://github.com/openstack/heat /opt/heat
 
-COPY config.sh /opt/kolla/config.sh
-COPY standalone.env /opt/kolla/standalone.env
+COPY ./start.sh ./stack-create.sh ./deploy-undercloud.yaml /
+
+#CMD ["/start.sh"]
